--- a/resources/locales/en/error.json
+++ b/resources/locales/en/error.json
@@ -1,3 +1,3 @@
 {
-  "user_register": "Error in User Registre, please try again later"
+  "user_register": "Error in User Register, please try again later"
 }
